--- a/src/platform/privileges_scripts/com.carriez.RustDeskIkoiGeneric_server.plist
+++ b/src/platform/privileges_scripts/com.carriez.RustDeskIkoiGeneric_server.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
     <dict>
         <key>Label</key>
-        <string>com.carriez.RustDesk_server</string>
+        <string>com.carriez.RustDeskIkoiGeneric_server</string>
         <key>LimitLoadToSessionType</key>
         <array>
-          <string>LoginWindow</string>
-          <string>Aqua</string>
+            <string>LoginWindow</string>
+            <string>Aqua</string>
         </array>
         <key>KeepAlive</key>
         <dict>
