Change package author to avoid conflicts with original package

--- a/src/platform/privileges_scripts/com.maysomusician.RustDeskIkoiGeneric_server.plist
+++ b/src/platform/privileges_scripts/com.maysomusician.RustDeskIkoiGeneric_server.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
     <dict>
         <key>Label</key>
-        <string>com.carriez.RustDeskIkoiGeneric_server</string>
+        <string>com.maysomusician.RustDeskIkoiGeneric_server</string>
         <key>LimitLoadToSessionType</key>
         <array>
             <string>LoginWindow</string>
