--- a/Cargo.toml
+++ b/Cargo.toml
@@ -134,7 +134,7 @@ hound = "3.4"
 
 [package.metadata.bundle]
 name = "RustDeskIkoiGeneric"
-identifier = "com.carriez.rustdesk_ikoi_generic"
+identifier = "com.maysomusician.rustdesk_ikoi_generic"
 icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
 deb_depends = ["libgtk-3-0", "libxcb-randr0", "libxdo3", "libxfixes3", "libxcb-shape0", "libxcb-xfixes0", "libasound2", "libsystemd0", "pulseaudio", "python3-pip", "curl"]
 osx_minimum_system_version = "10.14"
